patchable/tests/ui/derive_fail_patchable_unknown_parameter.stderr
error: unrecognized `patchable` parameter
 --> tests/ui/derive_fail_patchable_unknown_parameter.rs:5:17
  |
5 |     #[patchable(unknown)]
  |                 ^^^^^^^
