patchable/tests/ui/derive_fail_patchable_unknown_parameter.rs
use patchable::Patchable;

#[derive(Patchable)]
struct InvalidPatchableParameter<T> {
    #[patchable(unknown)]
    value: T,
}

fn main() {}
